# code-for-blog

./: .gitignore  README.md
2023/faas-in-python-with-wasm-wasi/: Makefile  README.md  main.py  pyproject.toml
2023/faas-in-python-with-wasm-wasi/functions/: env.wasm  gojson.wasm
2023/faas-in-python-with-wasm-wasi/gojson/: go.mod  main.go
2023/go-oracle/: .env  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
2023/go-oracle/init_oracle/: 1_create_user.sql  2_create_test_model.sh
2023/go-oracle/misc/: setup-zig.sh
2023/pytest-with-testcontainers/: README.md  pyproject.toml
2023/pytest-with-testcontainers/src/pytest_with_testcontainers/: __init__.py
2023/pytest-with-testcontainers/tests/: conftest.py  test_mysql_version.py
2023/pytest_with_testcontainers/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  schema.sql
2023/pytest_with_testcontainers/src/: main.py
2023/pytest_with_testcontainers/src/udonya/: __init__.py  crud.py  db.py  schemas.py
2023/pytest_with_testcontainers/tests/: conftest.py  factories.py  test_mysql_version.py  test_views.py
