[project]
name = "faas-in-python-with-wasm-wasi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zztkm", email = "zztkm@tsurutatakumi.info" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.23.2",
    "wasmtime>=14.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [
    ".venv",
    "dist",
    ".git",
    ".eggs",
    "venv",
    "__pypackages__",
]

line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "ALL"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
