[project]
name = "pytest-with-testcontainers"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "zztkm", email = "zztkm@tsurutatakumi.info" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "testcontainers>=3.7.1",
    "PyMySQL>=1.1.0",
    "pytest>=7.4.3",
    "SQLAlchemy>=2.0.23",
    "ruff>=0.1.4",
]

[tool.rye.scripts]
lint = "ruff check ."
fix = "ruff check --fix ."
fmt = "ruff format ."
test = "pytest -v -vv tests"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [".venv", ".git", ".eggs", "venv", "__pypackages__"]

line-length = 128
target-version = "py312"

[tool.ruff.lint]
extend-select = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.isort]
profile = "black"
