[project]
name = "shigureni"
version = "0.1.0"
description = "udonya web api"
authors = [{ name = "zztkm", email = "zztkm@tsurutatakumi.info" }]
dependencies = [
    "SQLAlchemy>=2.0.23",
    "cryptography>=41.0.7",
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.25.0",
    "pymysql>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "pytest_with_testcontainers:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.8",
    "testcontainers>=3.7.1",
    "pytest>=7.4.3",
    "sqlacodegen==3.0.0rc3",
    "factory_boy>=3.3.0",
    "httpx>=0.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/udonya"]

[tool.rye.scripts]
lint = "ruff check ."
fix = "ruff check --fix ."
fmt = "ruff format ."
test = "pytest -v -vv tests"

# run uvicorn server
dev = "python src/main.py dev"
prod = "python src/main.py prod"

[tool.ruff]
exclude = [".venv", ".git", ".eggs", "venv", "__pypackages__"]

line-length = 128
target-version = "py312"

[tool.ruff.lint]
extend-select = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.isort]
profile = "black"
